--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: compoisson
 Type: Package
 Title: Conway-Maxwell-Poisson Distribution
-Version: 0.3
+Version: 0.3.1
 Date: 2008-05-07
-Author: Jeffrey Dunn
+Author: Jeffrey Dunn, Noam Ross
 Maintainer: Jeffrey Dunn <jsd115@gmail.com>
 Description: Provides routines for density and moments of the
         Conway-Maxwell-Poisson distribution as well as functions for
@@ -11,9 +11,6 @@ Description: Provides routines for density and moments of the
         data.
 License: BSD
 Imports: stats
-Packaged: 2012-10-29 08:58:27 UTC; ripley
-Repository: CRAN
-Date/Publication: 2012-10-29 08:58:27
 Suggests: testthat
 LinkingTo: Rcpp
 Imports: Rcpp
