--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,7 +10,6 @@ Description: Provides routines for density and moments of the
         fitting the COM-Poisson model for over/under-dispersed count
         data.
 License: BSD
-Imports: stats
 Suggests: testthat
 LinkingTo: Rcpp
-Imports: Rcpp
+Imports: Rcpp, matrixStats, stats
