--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,6 +13,6 @@ License: BSD
 Suggests: testthat,
     knitr,
     compoisson
-LinkingTo: Rcpp
-Imports: Rcpp, matrixStats, stats, optimx
+LinkingTo: Rcpp, matrixStats
+Imports: Rcpp, matrixStats, stats
 VignetteBuilder: knitr
