Added C++ distribution fns: d_com, q_com, p_com, r_com

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,8 +11,13 @@ export(com.loglikelihood)
 export(com.mean)
 export(com.var)
 export(compute_log_z)
+export(compute_z)
+export(d_com)
 export(dcom)
 export(logsumexp)
+export(p_com)
+export(q_com)
+export(r_com)
 export(rcom)
 importFrom(Rcpp,sourceCpp)
 importFrom(matrixStats,logSumExp)
