--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,4 +22,4 @@ export(rcom)
 importFrom(Rcpp,sourceCpp)
 importFrom(matrixStats,logSumExp)
 importFrom(stats,optim)
-useDynLib(compoisson2)
+useDynLib(compoisson)
