Re-compiling and roxygenizing

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,19 +5,16 @@ export(com.compute.z)
 export(com.confint)
 export(com.expectation)
 export(com.fit)
-export(com.log.density)
 export(com.log.difference)
 export(com.loglikelihood)
 export(com.mean)
 export(com.var)
-export(compute_log_z)
-export(compute_z)
-export(d_com)
+export(com_compute_log_z)
+export(com_compute_z)
 export(dcom)
 export(logsumexp)
-export(p_com)
-export(q_com)
-export(r_com)
+export(pcom)
+export(qcom)
 export(rcom)
 importFrom(Rcpp,sourceCpp)
 importFrom(stats,optim)
