--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,12 @@ before_install:
 install:
   - ./travis-tool.sh install_deps
   - ./travis-tool.sh install_github noamross/compoisson@orig-reference
+  - ./travis-tool.sh github_package jimhester/covr
 
 script: ./travis-tool.sh run_tests
+
+after_success:
+  - Rscript -e 'library(covr);coveralls()'
 
 on_failure:
   - ./travis-tool.sh dump_logs
