--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(com.compute.z)
 export(com.confint)
 export(com.expectation)
 export(com.fit)
+export(com.log.density)
 export(com.loglikelihood)
 export(com.mean)
 export(com.var)
