--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,10 +12,12 @@ export(com.var)
 export(com_compute_log_z)
 export(com_compute_z)
 export(dcom)
+export(dcom2)
 export(logsumexp)
 export(pcom)
 export(qcom)
 export(rcom)
+import(RcppParallel)
 importFrom(Rcpp,sourceCpp)
 importFrom(stats,optim)
 useDynLib(compoisson)
