--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,7 +12,7 @@ export(com.var)
 export(com_compute_log_z)
 export(com_compute_z)
 export(dcom)
-export(dcom2)
+export(dcom_parallel)
 export(logsumexp)
 export(pcom)
 export(qcom)
