--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(dcom)
 export(dcom_parallel)
 export(logsumexp)
 export(pcom)
+export(pcom_parallel)
 export(qcom)
 export(rcom)
 import(RcppParallel)
