Adding qcom_parallel

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(logsumexp)
 export(pcom)
 export(pcom_parallel)
 export(qcom)
+export(qcom_parallel)
 export(rcom)
 import(RcppParallel)
 importFrom(Rcpp,sourceCpp)
