Adding rcom_parallel

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(pcom_parallel)
 export(qcom)
 export(qcom_parallel)
 export(rcom)
+export(rcom_parallel)
 import(RcppParallel)
 importFrom(Rcpp,sourceCpp)
 importFrom(stats,optim)
