--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,8 @@ export(com.loglikelihood)
 export(com.mean)
 export(com.var)
 export(com_compute_log_z)
+export(com_compute_log_z_2)
+export(com_compute_log_z_approx)
 export(com_compute_z)
 export(dcom)
 export(dcom_parallel)
