--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,15 +14,11 @@ export(com_compute_log_z_approx)
 export(com_compute_log_z_old)
 export(com_compute_z)
 export(dcom)
-export(dcom_parallel)
+export(logdiffexp)
 export(logsumexp)
 export(pcom)
-export(pcom_parallel)
 export(qcom)
-export(qcom_parallel)
 export(rcom)
-export(rcom_parallel)
-import(RcppParallel)
 importFrom(Rcpp,sourceCpp)
 importFrom(stats,optim)
 useDynLib(compoisson)
