--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(logsumexp)
 export(pcom)
 export(qcom)
 export(rcom)
+import(RcppParallel)
 importFrom(Rcpp,sourceCpp)
 importFrom(stats,optim)
 useDynLib(compoisson)
