--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(com_compute_log_z)
 export(com_compute_log_z_approx)
 export(com_compute_log_z_old)
 export(com_compute_z)
+export(com_mean)
 export(dcom)
 export(logdiffexp)
 export(logsumexp)
