--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(com_compute_log_z_approx)
 export(com_compute_log_z_old)
 export(com_compute_z)
 export(com_mean)
+export(com_var)
 export(dcom)
 export(logdiffexp)
 export(logsumexp)
