--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,8 +13,13 @@ export(com_compute_log_z)
 export(com_compute_log_z_approx)
 export(com_compute_log_z_old)
 export(com_compute_z)
+export(com_log_mean)
+export(com_log_mean_approx)
+export(com_log_var)
+export(com_log_var_approx)
 export(com_mean)
 export(com_var)
+export(com_var_approx)
 export(dcom)
 export(logdiffexp)
 export(logsumexp)
