Added Rcpp version of likelihood function.
Package now uses RcppArmadillo for matrix functions,
but so far only for one. May remove dependency if
more uses don't come up.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,6 +13,6 @@ License: BSD
 Suggests: testthat,
     knitr,
     CMPControl
-LinkingTo: Rcpp, RcppParallel, BH
-Imports: Rcpp, RcppParallel, BH
+LinkingTo: Rcpp, RcppParallel, BH, RcppArmadillo
+Imports: Rcpp, RcppParallel, BH, RcppArmadillo
 VignetteBuilder: knitr
