--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(com_log_mean)
 export(com_log_mean_approx)
 export(com_log_var)
 export(com_log_var_approx)
+export(com_loglik)
 export(com_mean)
 export(com_var)
 export(com_var_approx)
@@ -26,6 +27,7 @@ export(logsumexp)
 export(pcom)
 export(qcom)
 export(rcom)
+import(RcppArmadillo)
 import(RcppParallel)
 importFrom(Rcpp,sourceCpp)
 importFrom(stats,optim)
