Added functions for fitting Poisson and NegBin distributions.  These are convenience functions of similar form and speed to the compoission functions.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,13 +18,18 @@ export(com_log_mean_approx)
 export(com_log_var)
 export(com_log_var_approx)
 export(com_loglik)
+export(com_loglik2)
 export(com_mean)
 export(com_var)
 export(com_var_approx)
 export(dcom)
 export(logdiffexp)
 export(logsumexp)
+export(nb.fit)
+export(nb_loglik)
 export(pcom)
+export(pois.fit)
+export(pois_loglik)
 export(qcom)
 export(rcom)
 import(RcppArmadillo)
