--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,4 +1,4 @@
-Package: compoisson
+Package: cmp
 Type: Package
 Title: Conway-Maxwell-Poisson Distribution, optimized
 Version: 0.3.1
@@ -6,9 +6,8 @@ Date: 2008-05-07
 Author: Jeffrey Dunn, Noam Ross
 Maintainer: Jeffrey Dunn <jsd115@gmail.com>
 Description: Provides routines for density and moments of the
-        Conway-Maxwell-Poisson distribution as well as functions for
-        fitting the COM-Poisson model for over/under-dispersed count
-        data.
+        Conway-Maxwell-Poisson distribution, as well as functions for
+        fitting the distribution to data
 License: BSD
 Suggests: testthat,
     knitr,
